--- a/app/assets/stylesheets/welcome.css
+++ b/app/assets/stylesheets/welcome.css
@@ -2,3 +2,11 @@
   Place all the styles related to the matching controller here.
   They will automatically be included in application.css.
 */
+  .thumbnail { height: 280px !important; }
+      .btn-droppable { width: 180px; height: 30px; padding-left: 4px; }
+      .btn-draggable { width: 160px; }
+      .emage { height: 215px; }
+      h1 { padding: .2em; margin: 0; }
+      #products { float:left; width: 500px; margin-right: 2em; }
+      #cart { width: 200px; float: left; margin-top: 1em; }
+      #cart ol { margin: 0; padding: 1em 0 1em 3em; }
