--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,88 +1,119 @@
-<div ng-app="student">
-<div ng-controller="StudentCtrl">
-  <input type="text" ng-model='search' name='search'>
-  <div ng-repeat="stud in students | filter:search">
-    <p>{{stud.name}}</p>
-    <p>{{stud.email}}</p>
-  </div>
- 
-  Selected Items for List::
-  <div ng-repeat="l1 in list1">
-  	<div>{{l1.title}}</div>
-  </div>
+<div>
+  <div>
+    <!-- <input type="text" ng-model='search' name='search'>
+    <div ng-repeat="stud in students | filter:search">
+      <p>{{stud.name}}</p>
+      <p>{{stud.email}}</p>
+    </div> -->
+      <div> <h3><u>{{department}} Department</u></h3></div>
 
-<div class='contentWrapper ng-cloak'>
- 		<div class="row-fluid">
-        <div class="container" style="text-align: center;">
-          <!-- <div class="btn btn-droppable" ng-repeat="item in list5" data-drop="true" ng-model='list5' data-jqyoui-options="{accept:'.btn-draggable:not([ng-model=list5])'}"  jqyoui-droppable="{index: {{$index}}}">
-            <div class="btn btn-info btn-draggable" data-drag="{{item.drag}}" data-jqyoui-options="{revert: 'invalid'}" ng-model="list5" jqyoui-draggable="{index: {{$index}},placeholder:true,animate:true}" ng-hide="!item.title">{{item.title}}</div>
-          </div> -->
-
-          <ul class="thumbnails">
-              <li class="span3" style='margin-left:10px;'>
-               <div class="btn btn-droppable" ng-repeat="item in list5" data-drop="true" ng-model='list5' data-jqyoui-options="{accept:'.btn-draggable:not([ng-model=list5])'}"  jqyoui-droppable="{index: {{$index}}}">
-            <div class="btn btn-info btn-draggable" data-drag="{{item.drag}}" data-jqyoui-options="{revert: 'invalid'}" ng-model="list5" jqyoui-draggable="{index: {{$index}},placeholder:true,animate:true}" ng-hide="!item.title">{{item.title}}</div>
-              </li>
-               <li class="span3" style='margin-left:10px;'>Drop To
-                <div class="thumbnail" data-drop="true" ng-model='list1' data-jqyoui-options="optionsList1" jqyoui-droppable="{multiple:true}">
-                  <div class="caption">
-                    <div class="btn btn-info btn-draggable" ng-repeat="item in list1" ng-show="item.title" data-drag="{{item.drag}}" data-jqyoui-options="{revert: 'invalid'}" ng-model="list1" jqyoui-draggable="{index: {{$index}},animate:true}">{{item.title}}</div>
-                  </div>
-                </div>
-              </li>
-              </ul>
-
-           <!--    <p> Drop your courses here</p>
-            <ul class="thumbnails">
-              <li class="span3" style='margin-left:10px;'>
-                <div class="thumbnail" data-drop="true" ng-model='list1' data-jqyoui-options="optionsList1" jqyoui-droppable="{multiple:true}">
-                  <div class="caption">
-                    <div class="btn btn-info btn-draggable" ng-repeat="item in list1" ng-show="item.title" data-drag="{{item.drag}}" data-jqyoui-options="{revert: 'invalid'}" ng-model="list1" jqyoui-draggable="{index: {{$index}},animate:true}">{{item.title}}</div>
-                  </div>
-                </div>
-              </li>
-              </ul> -->
-        </div>
+    <!-- Selected Items for List::
+    <div ng-repeat="l1 in list1">
+    	<div>{{l1}}</div>
+    </div> -->
+      <div>
+        <h4>You have already taken:</h4>
+          <ul>
+            <li>{{department}} I </li>
+            <li>{{department}} II Honors</li>
+          </ul>
       </div>
 
+      <div>
+        <h4>Your recommended course(s)</h4>
+        <p>Drag and drop the selected course to the right sidebar</p>
+      </div>
+    <div class='contentWrapper ng-cloak'>
+     		<div class="row-fluid">
+            <div class="container" style="text-align: center;">
+              <!-- <div class="btn btn-droppable" ng-repeat="item in list5" data-drop="true" ng-model='list5' data-jqyoui-options="{accept:'.btn-draggable:not([ng-model=list5])'}"  jqyoui-droppable="{index: {{$index}}}">
+                <div class="btn btn-info btn-draggable" data-drag="{{item.drag}}" data-jqyoui-options="{revert: 'invalid'}" ng-model="list5" jqyoui-draggable="{index: {{$index}},placeholder:true,animate:true}" ng-hide="!item.title">{{item.title}}</div>
+              </div> -->
 
-        <div class='content'>
-          <div class="row-fluid">
-          	<!-- <p> Drop your courses here</p>
-            <ul class="thumbnails">
-              <li class="span3" style='margin-left:10px;'>
-                <div class="thumbnail" data-drop="true" ng-model='list1' data-jqyoui-options="optionsList1" jqyoui-droppable="{multiple:true}">
-                  <div class="caption">
-                    <div class="btn btn-info btn-draggable" ng-repeat="item in list1" ng-show="item.title" data-drag="{{item.drag}}" data-jqyoui-options="{revert: 'invalid'}" ng-model="list1" jqyoui-draggable="{index: {{$index}},animate:true}">{{item.title}}</div>
-                  </div>
-                </div>
-              </li> -->
-             <!--  <li class="span3" style='margin-left:10px;'>
-                <div class="thumbnail" data-drop="true" ng-model='list2' data-jqyoui-options="{accept:'.btn-draggable:not([ng-model=list2])'}"  jqyoui-droppable="{multiple:true}">
-                  <div class="caption">
-                    <div class="btn btn-info btn-draggable" ng-repeat="item in list2" ng-show="item.title" data-drag="{{item.drag}}" data-jqyoui-options="{revert: 'invalid'}" ng-model="list2" jqyoui-draggable="{index: {{$index}},animate:true}">{{item.title}}</div>
-                  </div>
-                </div>
-              </li> -->
-             <!--  <li class="span3" style='margin-left:10px;'>
-                <div class="thumbnail" data-drop="true" ng-model='list3' data-jqyoui-options="{accept:'.btn-draggable:not([ng-model=list3])'}"  jqyoui-droppable="{multiple:true}">
-                  <div class="caption">
-                    <div class="btn btn-info btn-draggable" ng-repeat="item in list3" ng-show="item.title" data-drag="{{item.drag}}" data-jqyoui-options="{revert: 'invalid'}" ng-model="list3" jqyoui-draggable="{index: {{$index}},animate:true}">{{item.title}}</div>
-                  </div>
-                </div>
-              </li> -->
-             <!--  <li class="span3" style='margin-left:10px;'>
-                <div class="thumbnail" data-drop="true" ng-model='list4' data-jqyoui-options="{accept:'.btn-draggable:not([ng-model=list4])'}"  jqyoui-droppable="{multiple:true}">
-                  <div class="caption">
-                    <div class="btn btn-info btn-draggable" ng-repeat="item in list4" ng-show="item.title" data-drag="{{item.drag}}" data-jqyoui-options="{revert: 'invalid'}" ng-model="list4" jqyoui-draggable="{index: {{$index}},animate:true}">{{item.title}}</div>
-                  </div>
-                </div>
-              </li> -->
-            <!-- </ul> -->
+              <ul class="thumbnails">
+                  <li class="span3" style='margin-left:10px;'>
+                   <div class="btn btn-droppable" ng-repeat="item in list5" data-drop="true" ng-model='list5' data-jqyoui-options="{accept:'.btn-draggable:not([ng-model=list5])'}"  jqyoui-droppable="{index: {{$index}}}">
+                <div class="btn btn-info btn-draggable" data-drag="{{item.drag}}" data-jqyoui-options="{revert: 'invalid'}" ng-model="list5" jqyoui-draggable="{index: {{$index}},placeholder:true,animate:true}" ng-hide="!item.title">{{item.title}}</div>
+                  </li>
+                   <li class="span3" style='margin-left:10px;'>Drop To
+                    <div class="thumbnail" data-drop="true" ng-model='list1' data-jqyoui-options="optionsList1" jqyoui-droppable="{multiple:true}">
+                      <div class="caption">
+                        <div class="btn btn-info btn-draggable" ng-repeat="item in list1" ng-show="item.title" data-drag="{{item.drag}}" data-jqyoui-options="{revert: 'invalid'}" ng-model="list1" jqyoui-draggable="{index: {{$index}},animate:true}">{{item.title}}</div>
+                      </div>
+                    </div>
+                  </li>
+                  </ul>
+
+               <!--    <p> Drop your courses here</p>
+                <ul class="thumbnails">
+                  <li class="span3" style='margin-left:10px;'>
+                    <div class="thumbnail" data-drop="true" ng-model='list1' data-jqyoui-options="optionsList1" jqyoui-droppable="{multiple:true}">
+                      <div class="caption">
+                        <div class="btn btn-info btn-draggable" ng-repeat="item in list1" ng-show="item.title" data-drag="{{item.drag}}" data-jqyoui-options="{revert: 'invalid'}" ng-model="list1" jqyoui-draggable="{index: {{$index}},animate:true}">{{item.title}}</div>
+                      </div>
+                    </div>
+                  </li>
+                  </ul> -->
+            </div>
           </div>
-        </div>
+
+
+            <div class='content'>
+              <div class="row-fluid">
+              	<!-- <p> Drop your courses here</p>
+                <ul class="thumbnails">
+                  <li class="span3" style='margin-left:10px;'>
+                    <div class="thumbnail" data-drop="true" ng-model='list1' data-jqyoui-options="optionsList1" jqyoui-droppable="{multiple:true}">
+                      <div class="caption">
+                        <div class="btn btn-info btn-draggable" ng-repeat="item in list1" ng-show="item.title" data-drag="{{item.drag}}" data-jqyoui-options="{revert: 'invalid'}" ng-model="list1" jqyoui-draggable="{index: {{$index}},animate:true}">{{item.title}}</div>
+                      </div>
+                    </div>
+                  </li> -->
+                 <!--  <li class="span3" style='margin-left:10px;'>
+                    <div class="thumbnail" data-drop="true" ng-model='list2' data-jqyoui-options="{accept:'.btn-draggable:not([ng-model=list2])'}"  jqyoui-droppable="{multiple:true}">
+                      <div class="caption">
+                        <div class="btn btn-info btn-draggable" ng-repeat="item in list2" ng-show="item.title" data-drag="{{item.drag}}" data-jqyoui-options="{revert: 'invalid'}" ng-model="list2" jqyoui-draggable="{index: {{$index}},animate:true}">{{item.title}}</div>
+                      </div>
+                    </div>
+                  </li> -->
+                 <!--  <li class="span3" style='margin-left:10px;'>
+                    <div class="thumbnail" data-drop="true" ng-model='list3' data-jqyoui-options="{accept:'.btn-draggable:not([ng-model=list3])'}"  jqyoui-droppable="{multiple:true}">
+                      <div class="caption">
+                        <div class="btn btn-info btn-draggable" ng-repeat="item in list3" ng-show="item.title" data-drag="{{item.drag}}" data-jqyoui-options="{revert: 'invalid'}" ng-model="list3" jqyoui-draggable="{index: {{$index}},animate:true}">{{item.title}}</div>
+                      </div>
+                    </div>
+                  </li> -->
+                 <!--  <li class="span3" style='margin-left:10px;'>
+                    <div class="thumbnail" data-drop="true" ng-model='list4' data-jqyoui-options="{accept:'.btn-draggable:not([ng-model=list4])'}"  jqyoui-droppable="{multiple:true}">
+                      <div class="caption">
+                        <div class="btn btn-info btn-draggable" ng-repeat="item in list4" ng-show="item.title" data-drag="{{item.drag}}" data-jqyoui-options="{revert: 'invalid'}" ng-model="list4" jqyoui-draggable="{index: {{$index}},animate:true}">{{item.title}}</div>
+                      </div>
+                    </div>
+                  </li> -->
+                <!-- </ul> -->
+              </div>
+            </div>
+          </div>
+
+        <div>
+          <h4>11th Grade courses offered:</h4>
+           <ul>
+            <li>{{department}} I </li>
+            <li>{{department}} II Honors</li>
+          </ul>
       </div>
-     
-<!-- </div> -->
-</div>
+       <div>
+          <h4>I intend to appeal for:</h4>
+           <ul>
+            <li>{{department}} I </li>
+            <li>{{department}} II Honors</li>
+          </ul>
+      </div>
+      <div>
+        <p> Note to Scheduler:</p>
+        <textarea name="notes"></textarea>
+      </div>
+
+  <!-- </div> -->
+  </div>
 </div>
