--- a/app/views/courses/_form.html.erb
+++ b/app/views/courses/_form.html.erb
@@ -19,6 +19,10 @@
     <%= f.label :description %><br>
     <%= f.text_area :description %>
   </div>
+  <div class="field">
+    <%= f.label :Department %><br>
+    <%= f.select :department_id, Department.all.order(:name).collect {|x| [x.name, x.id]},{}, :multiple => false%>
+  </div>
   <div class="actions">
     <%= f.submit %>
   </div>
