--- a/app/views/courses/show.html.erb
+++ b/app/views/courses/show.html.erb
@@ -10,5 +10,10 @@
   <%= @course.description %>
 </p>
 
+<p>
+  <strong>Department:</strong>
+  <%= @course.department.name %>
+</p>
+
 <%= link_to 'Edit', edit_course_path(@course) %> |
 <%= link_to 'Back', courses_path %>
