--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -74,11 +74,9 @@
           <div class="well sidebar-nav">
             <ul class="nav nav-list">
               <li class="nav-header">Summary</li>
-              <li><%= link_to "English", "/path1"  %></li>
-              <li><%= link_to "History", "/path2"  %></li>
-              <li><%= link_to "Science", "/path3"  %></li>
-              <li><%= link_to "Math", "/path3"  %></li>
-              <li><%= link_to "Physics", "/path3"  %></li>
+              <% departments.each_with_index do |dept,index| %>
+                <li ng-class="{'active': <%= dept.name === departments.first.name %>}" ng-click="active_class($event)" class='ng-scope' ><%= link_to dept.name, "#", :draggable=>true, :class => 'ng-binding' %></li>
+              <% end %>
             </ul>
           </div><!--/.well -->
         </div><!--/span-->
