--- a/app/views/admin/departments/index.html.haml
+++ b/app/views/admin/departments/index.html.haml
@@ -1,22 +1,21 @@
-%h1 Listing departments
-%table
+%h2 Departments
+= link_to 'New Department', new_admin_department_path
+%br/
+%br/
+%table{:id => 'departments'}
   %thead
     %tr
       %th Name
       %th Code
       %th Description
-      %th
-      %th
-      %th
-  = departments.first.inspect
+      %th Actions
   %tbody
     - departments.each do |dept|
       %tr
-        %td= dept.name
+        %td= link_to dept.name, admin_department_path(dept)
         %td= dept.code
         %td= dept.description
-        %td= link_to 'Show', admin_department_path(dept)
-        %td= link_to 'Edit', edit_admin_department_path(dept)
-        %td= link_to 'Destroy', admin_department_path(dept), method: :delete, data: { confirm: 'Are you sure?' }
-%br/
-= link_to 'New Department', new_admin_department_path
+        %td
+          = link_to 'Edit', edit_admin_department_path(dept)
+          |
+          = link_to 'Destroy', admin_department_path(dept), method: :delete, data: { confirm: 'Are you sure?' }
