--- a/app/views/admin/courses/show.html.haml
+++ b/app/views/admin/courses/show.html.haml
@@ -1,13 +1,21 @@
 %p#notice= notice
-%p
-  %strong Name:
+%h3
   = course.name
-%p
-  %strong Description:
-  = course.description
-%p
-  %strong Department:
-  = course.department.name
+  Details.
+%table
+  %tr
+    %th Name
+    %td= course.name
+    %th Code
+    %td= course.code
+  %tr
+    %th Description
+    %td= course.description
+    %th Department
+    %td= link_to course.department.code, admin_department_path(course.department)
+  %tr
+    %th Grade
+    %td{:colspan => 3}= course.grade.name rescue ''
 = link_to 'Edit', edit_admin_course_path(course)
 |
 \#{link_to 'Back', admin_courses_path}
