--- a/app/views/admin/courses/show.html.haml
+++ b/app/views/admin/courses/show.html.haml
@@ -9,13 +9,13 @@
     %th Code
     %td= course.code
   %tr
-    %th Description
-    %td= course.description
     %th Department
     %td= link_to course.department.code, admin_department_path(course.department)
-  %tr
     %th Grade
-    %td{:colspan => 3}= course.grade.name rescue ''
+    %td= course.grade.name rescue ''
+  %tr
+    %th Description
+    %td{:colspan => 3}= course.description
 = link_to 'Edit', edit_admin_course_path(course)
 |
 \#{link_to 'Back', admin_courses_path}
