--- a/app/views/admin/grades/_form.html.haml
+++ b/app/views/admin/grades/_form.html.haml
@@ -1,19 +1,19 @@
-= form_for(grade) do |f|
-  - if grade.errors.any?
-    #error_explanation
-      %h2
-        = pluralize(grade.errors.count, "error")
-        prohibited this grade from being saved:
-      %ul
-        - grade.errors.full_messages.each do |msg|
-          %li= msg
-  .field
-    = f.label :name
-    %br/
-    = f.text_field :name
-  .field
-    = f.label :description
-    %br/
-    = f.text_field :description
-  .actions
-    = f.submit
+- if @grade.errors.any?
+  #error_explanation
+    %h4
+      = pluralize(@grade.errors.count, "error")
+      prohibited this grade from being saved:
+    %ul
+      - @grade.errors.full_messages.each do |msg|
+        %li= msg
+%table
+  %tr
+    %th= f.label :name
+    %td= f.text_field :name
+  %tr
+    %th= f.label :description
+    %td= f.text_field :description
+  %tr
+    %th{:colspan => 2}
+      .actions
+        = f.submit 'Save Grade'
