--- a/app/views/admin/grades/index.html.erb
+++ b/app/views/admin/grades/index.html.erb
@@ -1,24 +1,21 @@
-<h1>Listing grades</h1>
+<h2>Grades</h2>
 
-<table>
+<table id='grades'>
   <thead>
     <tr>
       <th>Name</th>
       <th>Description</th>
-      <th></th>
-      <th></th>
-      <th></th>
+      <th>Actions</th>
     </tr>
   </thead>
 
   <tbody>
-    <% @grades.each do |grade| %>
+    <% grades.each do |grade| %>
       <tr>
-        <td><%= grade.name %></td>
+        <td><%= link_to grade.name, admin_grade_path(grade) %></td>
         <td><%= grade.description %></td>
-        <td><%= link_to 'Show', grade %></td>
-        <td><%= link_to 'Edit', edit_grade_path(grade) %></td>
-        <td><%= link_to 'Destroy', grade, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to 'Edit', edit_admin_grade_path(grade) %> | 
+        <%= link_to 'Destroy', admin_grades_path, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
   </tbody>
@@ -26,4 +23,4 @@
 
 <br>
 
-<%= link_to 'New Grade', new_grade_path %>
+<%= link_to 'New Grade', new_admin_grade_path %>
