--- a/app/views/admin/grades/new.html.erb
+++ b/app/views/admin/grades/new.html.erb
@@ -1,5 +1,5 @@
-<h1>New grade</h1>
-
-<%= render 'form' %>
-
-<%= link_to 'Back', grades_path %>
+<h2>New grade</h2>
+<%= form_for(@grade, url: admin_grades_path) do |f| %>
+<%= render :partial => 'form', :locals => {:f => f} %>
+<% end %>
+<%= link_to 'Back', admin_grades_path %>
