--- a/app/views/admin/grades/show.html.erb
+++ b/app/views/admin/grades/show.html.erb
@@ -1,14 +1,12 @@
 <p id="notice"><%= notice %></p>
-
-<p>
-  <strong>Name:</strong>
-  <%= @grade.name %>
-</p>
-
-<p>
-  <strong>Description:</strong>
-  <%= @grade.description %>
-</p>
-
-<%= link_to 'Edit', edit_grade_path(@grade) %> |
-<%= link_to 'Back', grades_path %>
+<h2>Details for Grade <%= @grade.name %></h2>
+<table>
+	<tr>
+  <th>Name:</th>
+  <td><%= @grade.name %></td></tr>
+  <tr><th>Description:</th>
+  <td><%= @grade.description %></td>
+</tr>
+</table>
+<%= link_to 'Edit', edit_admin_grade_path(@grade) %> |
+<%= link_to 'Back', admin_grades_path %>
