--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -27,7 +27,7 @@
           	</li>
             <li class="span3" style='margin-left:10px;'>
               Drop To
-              <div class="thumbnail selected_courses" data-drop="true" ng-model='list1' data-jqyoui-options="optionsList1" jqyoui-droppable="{multiple:true, onDrop: this.myCallback({{item.id}})}">
+              <div class="thumbnail selected_courses" data-drop="true" ng-model='list1' data-jqyoui-options="optionsList1" jqyoui-droppable="{multiple:true, onDrop: myCallback({{item.id}})}">
                 <div class="caption">
                   <div class="btn btn-info btn-draggable" ng-repeat="item in list1" ng-show="item.title" data-drag="{{item.drag}}" data-jqyoui-options="{revert: 'invalid'}" ng-model="list1" course_id="{{item.id}}" jqyoui-draggable="{index: {{$index}},animate:true}">
                     <%= hidden_field_tag 'user[selected_course]', '{{item.id}}', class:'selected_course' %>
@@ -40,34 +40,36 @@
         </div>
       </div>
 
-
-      <!--div class='content'>
+	  <h4>Your recommended {{department}} course(s):</h4>
+      <div class='content'>
         <ul id="drag-elements">
-          <li draggable="true">Element One</li>
-          <li draggable="true">Element Two</li>
-          <li draggable="true">Element Three</li>
-          <li draggable="true">Element Four</li>
-          <li draggable="true">Element Five</li>
+          <% recommended_courses.each do |course| %>
+          	<li draggable="true" class="btn btn-info"><%= course.name %></li>
+          <% end %>
         </ul>
-        
-        <div id="drop-target-one">
-          Drop Here!
-        </div>
+    <div id="drop-target-one" name="chosen[courses]" class='chosen_courses' >Drop here.
+    	<ul id="drop-elements">
+        	<% current_courses.each do |course| %>
+        		<li draggable="true" class="btn btn-info"><%= course.name %></li>
+        	<% end %>
+    	</ul>
+    </div>
       </div>
-    </div-->
-
+    </div>
     <div>
-      <h4>11th Grade courses offered:</h4>
-       <ul>
-        <li>{{department}} I </li>
-        <li>{{department}} II Honors</li>
-      </ul>
+      <h4><%= grade.description rescue '' %> {{department}} courses offered:</h4>
+       <ul ng-model='department'>
+         <% grade_department_courses(grade_courses, 'department').each do |c| %>
+           <li draggable="true" class="btn btn-info"><%= c.name %></li>
+         <% end %>
+       </ul>
     </div>
     <div>
       <h4>I intend to appeal for:</h4>
         <ul>
+          <% grade_courses.each do |ac| %>
           <li>{{department}} I </li>
-          <li>{{department}} II Honors</li>
+          <% end %>
         </ul>
     </div>
     <div>
