--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -11,66 +11,50 @@
     </div>
 
     <div>
-      <h4>Your recommended course(s)</h4>
+      <h4>Your recommended {{department}} course(s)</h4>
       <p>Drag and drop the selected course to the right sidebar</p>
     </div>
     <div class='contentWrapper ng-cloak'>
-   		<div class="row-fluid">
-        <div class="container" style="text-align: center;">
-          <ul class="thumbnails">
-          	<li class="span3" style='margin-left:10px;'>
-          	  <div class="btn btn-droppable" ng-repeat="item in list5" data-drop="true" ng-model='list5' data-jqyoui-options="{accept:'.btn-draggable:not([ng-model=list5])'}"  jqyoui-droppable="{index: {{$index}}}">
-            	  <div class="btn btn-info btn-draggable" data-drag="{{item.drag}}" data-jqyoui-options="{revert: 'invalid'}" ng-model="list5" jqyoui-draggable="{index: {{$index}},placeholder:true,animate:true}" course_id="{{item.id}}" ng-hide="!item.title">
-            	    {{item.title}}
-            	  </div>
-              </div>
-          	</li>
-            <li class="span3" style='margin-left:10px;'>
-              Drop To
-              <div class="thumbnail selected_courses" data-drop="true" ng-model='list1' data-jqyoui-options="optionsList1" jqyoui-droppable="{multiple:true, onDrop: myCallback({{item.id}})}">
-                <div class="caption">
-                  <div class="btn btn-info btn-draggable" ng-repeat="item in list1" ng-show="item.title" data-drag="{{item.drag}}" data-jqyoui-options="{revert: 'invalid'}" ng-model="list1" course_id="{{item.id}}" jqyoui-draggable="{index: {{$index}},animate:true}">
-                    <%= hidden_field_tag 'user[selected_course]', '{{item.id}}', class:'selected_course' %>
-                    <span id='selected_course'> {{item.title}} </span>
-                  </div>
-                </div>
-              </div>
-            </li>
-          </ul>
-        </div>
-      </div>
-
-	  <h4>Your recommended {{department}} course(s):</h4>
-      <div class='content'>
-        <ul id="drag-elements">
-          <% recommended_courses.each do |course| %>
-          	<li draggable="true" class="btn btn-info"><%= course.name %></li>
-          <% end %>
-        </ul>
-    <div id="drop-target-one" name="chosen[courses]" class='chosen_courses' >Drop here.
-    	<ul id="drop-elements">
-        	<% current_courses.each do |course| %>
-        		<li draggable="true" class="btn btn-info"><%= course.name %></li>
-        	<% end %>
-    	</ul>
-    </div>
-      </div>
+   	  <div class='content'>
+      <table>
+      	<tr><td>Recommended Course(s)</td><td> Drag and drop selection here </td></tr>
+        <tr>
+          <td style='width: 15%;'>
+            <ul id="drag-elements">
+              <% recommended_courses.each do |course| %>
+              	<li draggable="true" class="btn btn-info rec" style='width: 80%;'><div class="caption"><%= course.name %></div></li>
+              <% end %>
+            </ul>
+          </td>
+          <td id="drop-target-one" style='width: 15%;'>
+            <div id="drop-target-one" name="chosen[courses]" class='chosen_courses' >
+            	<ul id="drop-elements">
+                	<% current_courses.each do |course| %>
+                		<p><li draggable="true" class="btn btn-info rec" style='width: 80%;'><%= course.name %></li></p>
+                	<% end %>
+            	</ul>
+            </div>
+          </td>
+        </tr>
+      </table>
     </div>
     <div>
       <h4><%= grade.description rescue '' %> {{department}} courses offered:</h4>
-       <ul ng-model='department'>
-         <% grade_department_courses(grade_courses, 'department').each do |c| %>
-           <li draggable="true" class="btn btn-info"><%= c.name %></li>
-         <% end %>
+       <ul ng-model='department' ng-repeat='c in dept_grade_courses'>
+           <li draggable="true" class="btn btn-info">
+           	{{c.name}}
+           </li>
        </ul>
     </div>
     <div>
+      <% unless @appeal_courses.blank? %>
       <h4>I intend to appeal for:</h4>
         <ul>
-          <% grade_courses.each do |ac| %>
+          <% appeal_courses.each do |ac| %>
           <li>{{department}} I </li>
           <% end %>
         </ul>
+        <% end %>
     </div>
     <div>
       <p> Note to Scheduler:</p>
