Sportal: Updated course selection to make sure it is broken down in departments.

--- a/app/views/shared/_left_sidebar2.html.haml
+++ b/app/views/shared/_left_sidebar2.html.haml
@@ -4,4 +4,4 @@
 			%li{:class => "nav-header"}
 				Summary
 			%li{:ng-class=>"{'active': dept.name==='English'}"}
-				= link_to dept.name, "#"
+				= link_to dept.name, "#", :dept_id => dept.id
