--- a/app/views/shared/_left_sidebar.html.erb
+++ b/app/views/shared/_left_sidebar.html.erb
@@ -1,10 +1,11 @@
  <div class="span3">
     <div class="well sidebar-nav">
       <ul class="nav nav-list">
-        <li class="nav-header">Summary</li>
+        <li class="nav-header">Departments</li>
           <% departments.each_with_index do |dept,index| %>
           	<li ng-class="{'active': <%= dept.name === departments.first.name %>}" ng-click="active_class($event)" class='ng-scope' ><%= link_to dept.name, "#", :class => 'ng-binding' %></li>
           <% end %>
+          <li ng-class='inactive' ng-click='active_class($event)' class='ng-scope'><%= link_to 'Others', '#', :class => 'ng-binding' %></li>
       </ul>
     </div><!--/.well -->
 </div><!--/span-->
