--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -59,7 +59,7 @@
     <br/>
     <div>
       <h4><%= grade.description rescue '' %> {{department}} courses offered:</h4>
-       <ul id="drag-elements" class"drag-elements-two">
+       <ul id="drag-elements-two" class"drag-elements-two">
          <% grade_courses.each do |dept, gcourses| %>
          	<% gcourses.each do |course| %>
          		<li draggable="true" class="appealed rec <%= dept %> courses" style='width: 20%;'>
@@ -74,8 +74,8 @@
     <div>
       <h4>I intend to appeal for:</h4>
         <div id="drop-target-two" name="appealed[courses]" class='appealed_courses' >
-        	<ul id="drop-elements" class"drop-elements-two">
-            	<% current_courses.each do |dept, gcourses| %>
+        	<ul id="drop-elements-two" class"drop-elements-two">
+            	<% appeal_courses.each do |dept, gcourses| %>
             		<% gcourses.each do |course| %>
                 		<li draggable="true" class="appealed rec <%= dept %> courses" style='width: 20%;'>
 	                		<div class="caption" course_id='<%= course.id %>'>
